tests/snapshot/error/error_types/analyze.exp
SyntaxError: Redeclaration of let `x`
  ┌ error_types/analyze.js:4:7
  |
4 |   let x = 3;
  |       ^